Fixed positioning and overflow visibility of tooltips on kind icons

--- a/kohese-portal/client/css/index.css
+++ b/kohese-portal/client/css/index.css
@@ -355,7 +355,7 @@ table td .glyphicon-remove:hover {
   position: relative;
   height: calc(100% - 120px);
   width: calc(100% - 20px);
-  margin: 0px 0px 0px 20px;
+  padding-left: 20px;
   overflow: hidden;
 }
 
@@ -453,6 +453,10 @@ table td .glyphicon-remove:hover {
   cursor: pointer;
 }
 
+.no-icon {
+  padding-left: 14px;
+}
+
 .trim-info {
   max-width: 25em;
   overflow: hidden;
@@ -465,6 +469,20 @@ table td .glyphicon-remove:hover {
   max-width: 25em;
   white-space: pre-wrap;
   position: relative;
+}
+
+kind-icon {
+  padding-left: 3px;
+}
+
+.tooltip {
+  position: absolute;
+}
+
+.tooltip .tooltiptext {
+  z-index: 0;
+  top: -5px;
+  left: 105%;
 }
 
 .quick-item {
